--- a/index2.html
+++ b/index2.html
@@ -11,17 +11,18 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <title>Portofolio</title>
 </head>
-<body>
 
+
+<body style="scroll-behavior:smooth;">
   <div id="bg-loader">
     <h1 style="color: white;">Tunggu dulu...</h1>
     <div class="loader"></div>
-</div>
+  </div>
 
   <!-- navbar -->
   <nav class="navbar navbar-expand-lg fixed-top" >
-    <div class="navbar-brand" href="#"style="color: white;"><b>Rizky</b>Agusti</div>
-
+    <div class="navbar-brand"  style="color: white;"><b>Rizky</b>Agusti
+    </div>
     <div class="collapse navbar-collapse" id="navbarNav" >
       <ul class="navbar-nav">
         <li class="nav-item " style="border-left: 1px solid;">
@@ -41,23 +42,21 @@
 
   <!-- jumbotron -->
   <div class="jumbotron jumbotron-fluid" style="background-image:url(img/coding.jpg);">
-    <div class="container" style="color: white;"><br><br><br><br><br>
+    <div  class="container" style="color: white;"><br><br><br><br><br>
       <div class="row" style="margin-top: 100px;">
         <div class="col-sm">
 
         </div>
         <div class="col-sm">
           <div class="container">
-            <h1 style="color: white;text-align: r;line-height: 50px; text-shadow: 0px 0px 10px black;">Hallo!</h1>
-            <p class="sambutan" style="text-shadow: 0px 0px 10px black; text-align: left;"> Selamat datang..Saya Rizky Agusti saya akan menemani anda mengexplore web ini.</p>
+            <h1 style="color: white;text-align: r;line-height: 50px; text-shadow: 0px 0px 10px black;">Hello!</h1>
+            <p class="sambutan" style="text-shadow: 0px 0px 10px black; text-align: left;"> Selamat datang, saya Rizky Agusti akan menemani anda mengexplore web ini.</p>
 
             <a href="#About"><button type="button" class="btn btn-outline-light" >Mari Jelajahi </button></a>
           </div>
         </div>
       </div>
     </div>
-
-
   </div>
   <!-- jumbotron -->
 
@@ -84,7 +83,7 @@
 
             </p>
             <p class=" bio sambutan"><font face="font-family: 'Nunito', sans-serif;" style="  color: #616161; " >
-            Perkenalkan...Nama saya Rizky Agusti ,saya lahir di Kota Kuningan Jawa Barat pada tanggal 28 Agustus 2004 ,saya adalah seorang siswa di SMKN 2 Kab.Tangerang,dengan Jurusan TKJ (<i>Teknik Komputer dan Jaringan</i> ) .Awal niat saya membuat web ini adalah saya ingin mengenalkan diri saya kepada siapapun yang berkunjung ke web ini.Impian saya yaitu ingin menjadi Web Developer dan Network Engineer,ilmu yang saya miliki sekarang merupakan hasil dari susah payah saya selama ini,dan untuk kedepannya saya memiliki resolusi untuk membuat web secara konsisten serta produktif di mata pelajaran inti yang ada di sekolah.     <br><br>
+              Hello! Salam kenal, saya Rizky Agusti merupakan seorang siswa yang meduduki bangku menengah kejuruan dengan jurusan Teknik Komputer Jaringan, tertarik dengan segala hal yang yang baru bagi pribadi untuk dipelajari seperti halnya tentang Network Management, Web Design, Leadership, dan sedikit Photography, hidup sebagai manusia yang menuju tak terbatas dan melampauinya memiliki berbagai pengalaman baik dari bidang akademik maupun non-akademik adalah suatu hal yang berharga, aktif di beberapa organisasi selama menempuh pendidikan seperti Pramuka, Paskibra, Pencak Silat, Information Technology Club <b>(IT Club)</b>, dll. Juga pernah menjabat sebagai ketua umum ekstrakurikuler Information Technology <b>(IT Club)</b> di SMKN 2 Kabupaten Tangerang selama 1 periode dalam satu tahun, berhasil menyukseskan kegiatan baik dari kegiatan rutin maupun umum dengan segala pencapaian baru yang ada di dalamnya.<br><br>
             <a href="#skills">
               <button type="button" class="btn btn-dark" style="margin-top: 5px;">let's continue</button></a> 
               <a href="mailto:rizkyagusti7@gmail.com">
@@ -97,26 +96,26 @@
         </div>
         <br><br><br><div class="container"><hr></div><br><br>
         <h2 class="text-center judul" id="skills" style="color: #757575;">My Ability </h2>
-        <p class="text-center sambutan" style="color: #757575;">Setiap manusia, punya kemampuan tersendiri..</p>
+        <p class="text-center sambutan" style="color: #757575;">Setiap manusia, punya kemampuan tersendiri.</p>
         <br><br><br>
 
         <div class="container">
           <div class="row" style="margin-bottom: 100px">
             <div class="col-md" style=" margin-bottom: 30px;">
 
-              <p>HTML</p>
+              <p>Web Programming</p>
               <div class=" diagram">
-                <div class="skills html">90%</div>
+                <div class="skills wp">55%</div>
               </div>
               <br>
-              <p>CSS</p>
+              <p>Network Management</p>
               <div class=" diagram">
-                <div class="skills CSS">75%</div>
+                <div class="skills nm">80%</div>
               </div>
               <br>
-              <p>JavaScript</p>
+              <p>Leadership</p>
               <div class=" diagram">
-                <div class="skills JavaScript">20%</div>
+                <div class="skills ls">85%</div>
               </div>
               <br>
               <p>Digital Marketing</p>
@@ -133,7 +132,7 @@
 
             <div class="col-md" >
               <figure class="figure figure2">
-                <img src="img/coding5.jpg" class="mx-auto d-block img-fluid" style="border-radius: 10px;margin-top: 10px; " width="600px" alt="" class="figure-img img-fluid rounded">
+                <img src="img/ngomong.jpg" class="mx-auto d-block img-fluid" style="border-radius: 10px;margin-top: 10px;box-shadow: 0px 0px 5px grey; " width="500px" alt="" class="figure-img img-fluid rounded">
 
               </figure>
 
@@ -144,26 +143,16 @@
     </div>
   </div>
 </div>
-
-
-
 <!-- profil -->
-
-
-
-
-
 
 <!-- jeda sosial -->
 <div class="container-fluid" style="min-height:200px;"> 
   <div class="row" style="color: grey;"> 
     <div class="col-md text-center" style="margin-top: 70px;"><a href="https://www.facebook.com/rizkyagusti.iki"> <img src="img/fb.png" width="200px"></a></div>
     <div class="col-md text-center" style="margin-top: 70px;"><a href="https://www.instagram.com/rizky_crew.7z/"> <img src="img/insta.png" width="200px"></a></div>
-    <div class="col-md text-center" style="margin-top: 70px; margin-bottom: 100px;"><a href="https://www.youtube.com/channel/UC2NgYcX7106_CD0qzyDXCKA?view_as=subscriber"> <img src="img/yt.png" width="200px"></a></div>
+    <div class="col-md text-center" style="margin-top: 80px; margin-bottom: 100px;"><a href="https://www.linkedin.com/in/rizky-agusti-3bb2a7198"> <img src="img/linkedin.png" width="200px"></a></div>
   </div>
-
 </div>
-
 <!-- jeda sosial -->
 
 
@@ -171,12 +160,11 @@
 
 
 <!-- karir -->
-<div class="container-fluid karir" id="Career" style="
-">
+<div class="container-fluid karir" id="Career" >
 <br><br><br><br><br><br>
 <div class="container">
   <h3 class="judul2 text-center" style="color: white">My Career</h3>
-  <p class="text-center sambutan" style="color: white">Semua berasal dari bangku pendidikan..</p>
+  <p class="text-center sambutan" style="color: white">Semua berasal dari bangku pendidikan.</p>
 </div>
 
 
@@ -186,7 +174,7 @@
       <div class="card mx-auto" style="width: 18rem;">
         <img class="card-img-top" src="img/sdn1.jpg" alt="Card image cap">
         <div class="card-body">
-          <p class="card-text sambutan">Memulai bangku sekolah setelah PAUD,dan TK ke SDN KUTA JAYA 1 pada tahun 2010</p>
+          <p class="card-text sambutan"> Dimulai pada bangku pendidikan SDN KUTA JAYA 1 tahun 2010.</p>        
         </div>
       </div>
     </div>
@@ -194,7 +182,7 @@
       <div class="card mx-auto" style="width: 18rem;">
         <img class="card-img-top" src="img/smpn1.jpg" alt="Card image cap">
         <div class="card-body">
-          <p class="card-text sambutan">Melanjutkan bangku sekolah ke SMPN 1 PASARKEMIS dimulai pada tahun 2016 sampai 2019</p>
+          <p class="card-text sambutan">Melanjutkan bangku sekolah ke SMPN 1 PASARKEMIS pada tahun 2016 hingga 2019.</p>
         </div>
       </div>
     </div>
@@ -202,7 +190,7 @@
       <div class="card mx-auto" style="width: 18rem;">
         <img class="card-img-top" src="img/smkn2.jpeg" alt="Card image cap">
         <div class="card-body">
-          <p class="card-text sambutan">Saat ini dan 2 tahun kedepan, menjalani sekolah di SMKN 2 KAB.TANGERANG</p>
+          <p class="card-text sambutan">Menduduki bangku menengah kejurusan di SMKN 2 Kabupaten Tangerang.</p>
         </div>
       </div>
     </div>
@@ -217,7 +205,7 @@
       <div class="card mx-auto" style="width: 18rem;" >
         <img class="card-img-top" src="img/itclub.png" alt="Card image cap">
         <div class="card-body">
-          <p class="card-text sambutan">Mengikuti ekskul IT CLUB , saat awal masuk SMKN 2 KAB.TANGERANG</p>
+          <p class="card-text sambutan">Aktif di ekstrakurikuler Information Technology Club <b>(IT Club)</b></p>
         </div>
       </div>
     </div>
@@ -235,7 +223,7 @@
 <div class="container-fluid penghargaan">
   <br><br><br><br>
   <h2 class="judul2 text-center">achievement</h2>
-  <p class="text-center sambutan">Atas apa yang saya lewati ,saya harus mempunyai hasil !</p>
+  <p class="text-center sambutan">Atas apa yang saya lewati, saya harus mempunyai hasil !</p>
 
   <div class="container">
 
@@ -252,7 +240,7 @@
     
     <div class="col-sm"><figure class="figure sertifikat">
       <img src="img/sertif2.jpg" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
-      <figcaption class="figure-caption text-center">Pernah mengikuti lomba web design di Universitas Syekh Yusuf Tangerang.</figcaption>
+      <figcaption class="figure-caption text-center">Mengikuti ajang perlombaan web design di Universitas Syekh Yusuf Tangerang.</figcaption>
     </figure></div>
   </div>
 </div>
@@ -324,7 +312,7 @@
 
         <div class="col sambutan">
           <h5><br><br>Note*</h5><br>
-          <p>Jangan lah kalian puas atas apa yang telah kalian kerjakan dan janganlah kalian berputus asa karena kegagalan yang sulit di lewati, Setiap bug pasti bisa solved pada akhirnya...</p>
+          <p>You, do you. Tetaplah berbuat baik. Tetapi, kali ini dengan prinsip yang baru.</p>
         </div>
       </div>
 
@@ -343,10 +331,6 @@
 
           </a>
 
-          <a href="https://www.youtube.com/channel/UC2NgYcX7106_CD0qzyDXCKA?view_as=subscriber">
-            <i class="fa fa-youtube-play" aria-hidden="true"></i>
-
-          </a>
 
           <a href="mailto:rizkyagusti7@gmail.com">
             <i class="fa fa-envelope-o" aria-hidden="true"></i>
@@ -372,8 +356,6 @@
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="js/bootstrap.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/72e084f05c.js" crossorigin="anonymous"></script>
 </body>
 </html>
