Update two second

--- a/index2.html
+++ b/index2.html
@@ -188,7 +188,7 @@
     </div>
     <div class="col-sm">
       <div class="card mx-auto" style="width: 18rem;">
-        <img class="card-img-top" src="img/smkn2.jpeg" alt="Card image cap">
+        <img class="card-img-top" src="img/smkn2.jpg" alt="Card image cap">
         <div class="card-body">
           <p class="card-text sambutan">Menduduki bangku menengah kejurusan di SMKN 2 Kabupaten Tangerang.</p>
         </div>
@@ -203,7 +203,7 @@
 
     <div class="col-sm">
       <div class="card mx-auto" style="width: 18rem;" >
-        <img class="card-img-top" src="img/itclub.png" alt="Card image cap">
+        <img class="card-img-top" src="img/itclub.jpg" alt="Card image cap">
         <div class="card-body">
           <p class="card-text sambutan">Aktif di ekstrakurikuler Information Technology Club <b>(IT Club)</b></p>
         </div>
