--- a/index2.html
+++ b/index2.html
@@ -83,7 +83,7 @@
 
             </p>
             <p class=" bio sambutan"><font face="font-family: 'Nunito', sans-serif;" style="  color: #616161; " >
-              Hello! Salam kenal, saya Rizky Agusti merupakan seorang siswa yang meduduki bangku menengah kejuruan dengan jurusan Teknik Komputer Jaringan, tertarik dengan segala hal yang yang baru bagi pribadi untuk dipelajari seperti halnya tentang Network Management, Web Design, Leadership, dan sedikit Photography, hidup sebagai manusia yang menuju tak terbatas dan melampauinya memiliki berbagai pengalaman baik dari bidang akademik maupun non-akademik adalah suatu hal yang berharga, aktif di beberapa organisasi selama menempuh pendidikan seperti Pramuka, Paskibra, Pencak Silat, Information Technology Club <b>(IT Club)</b>, dll. Juga pernah menjabat sebagai ketua umum ekstrakurikuler Information Technology <b>(IT Club)</b> di SMKN 2 Kabupaten Tangerang selama 1 periode dalam satu tahun, berhasil menyukseskan kegiatan baik dari kegiatan rutin maupun umum dengan segala pencapaian baru yang ada di dalamnya.<br><br>
+              Hello! Salam kenal, saya Rizky Agusti merupakan seorang siswa yang meduduki bangku menengah kejuruan dengan jurusan Teknik Komputer Jaringan, tertarik dengan segala hal yang baru bagi pribadi untuk dipelajari seperti halnya tentang Network Management, Web Design, Leadership, dan sedikit Photography, hidup sebagai manusia yang menuju tak terbatas dan melampauinya memiliki berbagai pengalaman baik dari bidang akademik maupun non-akademik adalah suatu hal yang berharga, aktif di beberapa organisasi selama menempuh pendidikan seperti Pramuka, Paskibra, Pencak Silat, Information Technology Club <b>(IT Club)</b>, dll. Juga pernah menjabat sebagai ketua umum ekstrakurikuler Information Technology <b>(IT Club)</b> di SMKN 2 Kabupaten Tangerang selama 1 periode dalam satu tahun, berhasil menyukseskan kegiatan baik dari kegiatan rutin maupun umum dengan segala pencapaian baru yang ada di dalamnya.<br><br>
             <a href="#skills">
               <button type="button" class="btn btn-dark" style="margin-top: 5px;">let's continue</button></a> 
               <a href="mailto:rizkyagusti7@gmail.com">
@@ -190,7 +190,7 @@
       <div class="card mx-auto" style="width: 18rem;">
         <img class="card-img-top" src="img/smkn2.jpg" alt="Card image cap">
         <div class="card-body">
-          <p class="card-text sambutan">Menduduki bangku menengah kejurusan di SMKN 2 Kabupaten Tangerang.</p>
+          <p class="card-text sambutan">Menduduki bangku menengah kejuruan di SMKN 2 Kabupaten Tangerang.</p>
         </div>
       </div>
     </div>
@@ -262,7 +262,7 @@
           <div class="card-body">
             <h5 class="card-title" style="color: grey;">Kesimpulan</h5>
 
-            <p class="card-text" style="color: grey;">Semoga Web Portofolio saya bisa di terima bagi diri kalian sekaligus bisa jadi motivasi kedepannya agar lebih baik ,karena ini semua terbentuk atas dasar niat dan ijin Allah Swt. </p>
+            <p class="card-text" style="color: grey;">Semoga Web Portofolio saya bisa di terima bagi diri kalian sekaligus bisa jadi motivasi kedepannya agar lebih baik, karena ini semua terbentuk atas dasar niat dan ijin Allah Swt. </p>
 
           </div>
         </div>
@@ -274,7 +274,7 @@
           <div class="card-body">
             <h5 class="card-title" style="color: grey;">Penutup</h5>
 
-            <p class="card-text" style="color: grey;">Saya pribadi mengucapkan terimakasih dan meminta maaf atas kelebihan dan kekurangan untuk hal yang telah saya paparkan pada portofolio saya kali ini,semoga kedepannya saya bisa memberikan hal yang lebih sempurna lagi bagi kalian semua.</p>
+            <p class="card-text" style="color: grey;">Saya pribadi mengucapkan terimakasih dan meminta maaf atas kelebihan dan kekurangan untuk hal yang telah saya paparkan pada portofolio saya kali ini, semoga kedepannya saya bisa memberikan hal yang lebih sempurna lagi bagi kalian semua.</p>
 
           </div>
         </div>
@@ -297,7 +297,7 @@
 
       <div class="row" style="color:#9E9E9E;">
         <div class="col  sambutan ">
-          <h5><br><br> Sampai bertemu di lain waktu</h5><br><p >Di update selanjutnya yang lebih menarik dan efisien ,jangan ragu untuk terus mengunjungi web ini ,karena ini ini semua tak ada kaitannya dengan penipuan dan segala hal yang merugikan.</p>
+          <h5><br><br> Sampai bertemu di lain waktu</h5><br><p >Di update selanjutnya yang lebih menarik dan efisien, jangan ragu untuk terus mengunjungi web ini, karena ini ini semua tak ada kaitannya dengan penipuan dan segala hal yang merugikan.</p>
         </div>
 
         <div class="col-md sambutan" ><h5><br><br>Terimakasih kepada :</h5>
