--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,17 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DM8NRNQJTQ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-DM8NRNQJTQ');
+  </script>
+  
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.css" >
   <link rel="stylesheet" href="css/style2.css" >
