Perubahan Image Profile dan penambahan link sertifikat

--- a/index2.html
+++ b/index2.html
@@ -60,7 +60,7 @@
         </div>
         <div class="col-sm">
           <div class="container">
-            <h1 style="color: white;text-align: r;line-height: 50px; text-shadow: 0px 0px 10px black;">Hello!</h1>
+            <h1 style="color: white;text-align: r;line-height: 50px; text-shadow: 0px 0px 10px black;">Halo!</h1>
             <p class="sambutan" style="text-shadow: 0px 0px 10px black; text-align: left;"> Selamat datang, saya Rizky Agusti akan menemani anda mengexplore web ini.</p>
 
             <a href="#About"><button type="button" class="btn btn-outline-light" >Mari Jelajahi </button></a>
@@ -83,7 +83,7 @@
           <div class="container" id="bio">
             <div class="row">
               <div class=" col-md"  >
-               <img src="img/foto saya.jpg" alt="" width="300px" height="250px" class="img-fluid rounded mx-auto d-block" style="margin-bottom: 50px;margin-top: 50px;">
+               <img src="img/saya-1.jpg" alt="" width="300px" height="250px" class="img-fluid rounded mx-auto d-block" style="margin-bottom: 50px;margin-top: 50px;">
              </div>
 
              <div class="col-md" style="margin-right: 0;">
@@ -94,7 +94,7 @@
 
             </p>
             <p class=" bio sambutan"><font face="font-family: 'Nunito', sans-serif;" style="  color: #616161; " >
-              Hello! Salam kenal, saya Rizky Agusti merupakan seorang siswa yang meduduki bangku menengah kejuruan dengan jurusan Teknik Komputer Jaringan, tertarik dengan segala hal yang baru bagi pribadi untuk dipelajari seperti halnya tentang Network Management, Web Design, Leadership, dan sedikit Photography, hidup sebagai manusia yang menuju tak terbatas dan melampauinya memiliki berbagai pengalaman baik dari bidang akademik maupun non-akademik adalah suatu hal yang berharga, aktif di beberapa organisasi selama menempuh pendidikan seperti Pramuka, Paskibra, Pencak Silat, Information Technology Club <b>(IT Club)</b>, dll. Juga pernah menjabat sebagai ketua umum ekstrakurikuler Information Technology <b>(IT Club)</b> di SMKN 2 Kabupaten Tangerang selama 1 periode dalam satu tahun, berhasil menyukseskan kegiatan baik dari kegiatan rutin maupun umum dengan segala pencapaian baru yang ada di dalamnya.<br><br>
+              Halo! Salam kenal, saya Rizky Agusti merupakan seorang penggiat dunia digital yang banyak menghabiskan waktu di depan layar, yang rela menghabiskan secangkir kopi demi terciptanya sebuah inspirasi. Juga sangat tertarik dengan dunia Photography, aktif diberbagai platform sosial media yang bisa dikunjungi untuk sekedar mampir berkomunikasi.   <br><br>
             <a href="#skills">
               <button type="button" class="btn btn-dark" style="margin-top: 5px;">let's continue</button></a> 
               <a href="mailto:rizkyagusti7@gmail.com">
@@ -159,7 +159,7 @@
 <!-- jeda sosial -->
 <div class="container-fluid" style="min-height:200px;"> 
   <div class="row" style="color: grey;"> 
-    <div class="col-md text-center" style="margin-top: 70px;"><a href="https://www.facebook.com/rizkyagusti.iki"> <img src="img/fb.png" width="200px"></a></div>
+    <!-- <div class="col-md text-center" style="margin-top: 70px;"><a href="https://www.facebook.com/rizkyagusti.iki"> <img src="img/fb.png" width="200px"></a></div> -->
     <div class="col-md text-center" style="margin-top: 70px;"><a href="https://www.instagram.com/rizky_crew.7z/"> <img src="img/insta.png" width="200px"></a></div>
     <div class="col-md text-center" style="margin-top: 80px; margin-bottom: 100px;"><a href="https://www.linkedin.com/in/rizky-agusti-3bb2a7198"> <img src="img/linkedin.png" width="200px"></a></div>
   </div>
@@ -201,7 +201,7 @@
       <div class="card mx-auto" style="width: 18rem;">
         <img class="card-img-top" src="img/smkn2.jpg" alt="Card image cap">
         <div class="card-body">
-          <p class="card-text sambutan">Menduduki bangku menengah kejuruan di SMKN 2 Kabupaten Tangerang.</p>
+          <p class="card-text sambutan">Menduduki bangku menengah kejuruan di SMKN 2 Kabupaten Tangerang 2019 - 2022.</p>
         </div>
       </div>
     </div>
@@ -222,7 +222,7 @@
     </div>
 
     <div class="col" style="margin-bottom:100px;">
-
+      <br>
     </div>
   </div>
 </div>
@@ -254,6 +254,9 @@
       <figcaption class="figure-caption text-center">Mengikuti ajang perlombaan web design di Universitas Syekh Yusuf Tangerang.</figcaption>
     </figure></div>
   </div>
+
+  <a class="text-center sertif" href="https://drive.google.com/folderview?id=1x_gSai10yu5_QKD8zhix6Q0wccmMbIOI">Lihat lebih banyak.</a>
+
 </div>
 
 </div>
